loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: not found: value x
x = getX()
^LoopStairs:2: error: not found: value y
y = getY()
^LoopStairs:4: error: not found: value x
while(x != (14) && y != (0) ){
      ^LoopStairs:4: error: not found: value y
while(x != (14) && y != (0) ){
                   ^