loopfor.LoopStairs.scala.code
x = getX()
y = getY()

while(x != (14) && y != (0) ){
  isFacingWall() match {
    case true => left(); forward(); right();
    case false => forward();
  }
  
}